<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Electromizer</string>

    <!-- Home activity strings -->
    <string name="relay_1">Relay 1</string>
    <string name="relay_2">Relay 2</string>
    <string name="btn_label_auto">AUTO</string>
    <string name="btn_label_on">ON</string>
    <string name="btn_label_off">OFF</string>
    <string name="label_edit_relay1_hint">Enter Power in kWh</string>
    <string name="label_edit_relay2_hint">Enter Power in kWh</string>

    <!-- Menu strings -->
    <string name="bottom_menu_dashboard">Dashboard</string>
    <string name="bottom_menu_reports">Reports</string>
    <string name="bottom_menu_settings">Settings</string>

    <!-- Title strings -->
    <string name="title_dashboard">Enermizer - Dashboard</string>
    <string name="title_reports">Enermizer - Reports</string>
    <string name="title_settings">Enermizer - Settings</string>

    <!-- Reports -->
    <string name="report1">Energy consumed over period of time (kWh)</string>
    <string name="report2">Costs of energy consumed (€)</string>
    <string name="report2_subtitle">(Sum of all hourly Energy consumed x Awattar price)</string>
    <string name="report3">Average effective price (€)</string>
    <string name="report3_subtitle">(Costs of energy consumed over period divided by Energy consumed over period)</string>
    <string name="report4">Average Awattar price over period (€)</string>
    <string name="report5">Savings (€)</string>
    <string name="report5_subtitle">Costs of energy consumed minus Sum of all hourly Energy consumed x Average Awattar price</string>

    <string name="label_show_reports">Show summary based on selected dates</string>
    <string name="label_show_auto_relay">Show auto relay status</string>
    <string name="label_selected_date_range">Selected Date: %1$S</string>
    <string name="label_select_date">Select Date</string>
    <string name="label_auto_relay">Auto Relay Status</string>

    <!-- Settings -->
    <string name="label_settings_ipaddress">Enter the IP Address</string>
    <string name="label_settings_ipaddress_hint">192.168.1.1:8080</string>
    <string name="internet_status">Internet Status</string>
    <string name="raspberrypistatus">RaspberryPiStatus</string>


</resources>
