<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.reports.ReportsFragment">

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:text="@string/label_select_date"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        tools:text="@string/label_selected_date_range" />


    <!-- Scrollview of all 5 reports -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Report 1 -->
            <androidx.cardview.widget.CardView
                style="@style/CustomReportCards"
                app:cardBackgroundColor="@color/reportCard1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/label_report1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report1"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30" />

                    <TextView
                        android:id="@+id/value_report1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30"
                        tools:text="100" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Report 2 -->
            <androidx.cardview.widget.CardView
                style="@style/CustomReportCards"
                app:cardBackgroundColor="@color/reportCard2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/label_report2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report2"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30" />

                    <TextView
                        android:id="@+id/label_report2_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report2_subtitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15" />

                    <TextView
                        android:id="@+id/value_report2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30"
                        tools:text="100" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Report 3 -->
            <androidx.cardview.widget.CardView
                style="@style/CustomReportCards"
                app:cardBackgroundColor="@color/reportCard3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/label_report3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report3"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30" />


                    <TextView
                        android:id="@+id/label_report3_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report3_subtitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15" />

                    <TextView
                        android:id="@+id/value_report3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30"
                        tools:text="100" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Report 4 -->
            <androidx.cardview.widget.CardView
                style="@style/CustomReportCards"
                app:cardBackgroundColor="@color/reportCard4">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/label_report4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report4"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30" />

                    <TextView
                        android:id="@+id/value_report4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30"
                        tools:text="100" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <!-- Report 5 -->
            <androidx.cardview.widget.CardView
                style="@style/CustomReportCards"
                app:cardBackgroundColor="@color/reportCard5">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/label_report5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report5"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30" />

                    <TextView
                        android:id="@+id/label_report5_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:text="@string/report5_subtitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_20" />

                    <TextView
                        android:id="@+id/value_report5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_30"
                        tools:text="100" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>