<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.dashboard.DashboardFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".views.HomeFragment">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Black" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Relay 1 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgvw_relay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_relay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/relay1_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_1"
                    android:textAlignment="center"
                    android:textAppearance="?textAppearanceBody1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imgvw_relay"
                    app:layout_constraintStart_toStartOf="@+id/imgvw_relay"
                    app:layout_constraintTop_toBottomOf="@+id/imgvw_relay" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_on1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/Green"
                        android:text="@string/btn_label_on"
                        app:layout_constraintEnd_toStartOf="@+id/btn_off"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relay1_label" />

                    <Button
                        android:id="@+id/btn_off1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/Red"
                        android:text="@string/btn_label_off"
                        app:layout_constraintStart_toEndOf="@+id/btn_on"
                        app:layout_constraintTop_toBottomOf="@+id/relay1_label" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/Black" />

            <!-- relay 2 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgvw_relay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_relay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/relay2_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/relay_2"
                    android:textAppearance="?textAppearanceBody1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imgvw_relay2"
                    app:layout_constraintStart_toStartOf="@+id/imgvw_relay2"
                    app:layout_constraintTop_toBottomOf="@+id/imgvw_relay2" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_on2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/Green"
                        android:text="@string/btn_label_on"
                        app:layout_constraintEnd_toStartOf="@+id/btn_off2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relay2_label" />

                    <Button
                        android:id="@+id/btn_off2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/Red"
                        android:text="@string/btn_label_off"
                        app:layout_constraintStart_toEndOf="@+id/btn_on2"
                        app:layout_constraintTop_toBottomOf="@+id/relay2_label" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Black" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>